--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <h1 class="fw-light">OrdinalShapes</h1>
 
                     <p class="lead text-muted">
-                        A generative art project, inscribed on the ₿itcoin blockchain, which utilizes the inscription hash for the input of the script. They can contain plain shapes, circles, symmetrical shapes and glow.
+                        A generative art project, inscribed on the ₿itcoin blockchain, which utilizes the inscription hash for the input of the script. They can contain plain shapes, circles, symmetrical shapes, patterns and glow.
                     </p>
 
                     <p>by Obi</p>
