--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta property="og:url" content="https://crypt0biwan.github.io/OrdinalShapes/">
     <meta property="og:description" content="A generative art project, inscribed on the ₿itcoin blockchain, which utilizes the inscription hash for the input of the script. They can contain plain shapes, circles, symmetrical shapes, patterns and glow.">
     <meta property="og:image" content="https://crypt0biwan.github.io/OrdinalShapes/img/f59f1a5cf10c8b081f503b397e8e3813822c3ace68b7b601fea6ae3e8253c2fai0.png">
+    <meta name="twitter:card" content="A generative art project, inscribed on the ₿itcoin blockchain, which utilizes the inscription hash for the input of the script. They can contain plain shapes, circles, symmetrical shapes, patterns and glow." />
+    <meta name="twitter:creator" content="@crypt0biwan" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     
