--- a/index.html
+++ b/index.html
@@ -238,6 +238,10 @@
             {
                 "id": 328745,
                 "inscription": "6f49979d4aa183e4685ae595a54be4d3bef90f769504b69ddc642be03d08bd80i0"
+            },
+            {
+                "id": 347730,
+                "inscription": "2b5e8a6836c7b8e571e0b12c8b8608dd16100a7931c0c530b39daffe005d0882i0"
             }
         ]
 
