Added new output

--- a/index.html
+++ b/index.html
@@ -246,6 +246,10 @@
             {
                 "id": 355347,
                 "inscription": "9fde0bf111679f53c3a056a67d969d933af0fd49c3cf0e211716be108975ed61i0"
+            },
+            {
+                "id": 398179,
+                "inscription": "2383d591685b612cee674566712103d4bdc26c87e50e949e9f1266e35927fed7i0"
             }
         ]
 
