updated exchange link to MagicEden

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                             <div class="d-flex flex-column flex-sm-row justify-content-between align-items-center">
                                 <a class="btn btn-sm mb-2 mb-sm-0 btn-outline-primary" target="_blank" href="https://ordinals.com/inscription/${inscription}">View on ordinals.com</a>
 
-                                ${series === 1 ? (available ? `<a class="btn btn-sm mb-2 mb-sm-0 btn-primary" target="_blank" href="https://ordinalswallet.com/inscription/${inscription}">Buy on OrdinalsWallet.com</a>` : '') : `<a class="btn btn-sm mb-2 mb-sm-0 btn-primary" target="_blank" href="https://generative.xyz/generative/1000207/${inscription}">View on Generative.xyz</a>`}
+                                ${series === 1 ? (available ? `<a class="btn btn-sm mb-2 mb-sm-0 btn-primary" target="_blank" href="https://magiceden.io/ordinals/item-details/${inscription}">Buy on Magic Eden</a>` : '') : `<a class="btn btn-sm mb-2 mb-sm-0 btn-primary" target="_blank" href="https://generative.xyz/generative/1000207/${inscription}">View on Generative.xyz</a>`}
                                 
                                 <small class="text-muted">ID: ${id}</small>
                             </div>
